@@ -4,6 +4,7 @@ import com.bkap.fruitshop.dto.request.RoleRequest;
 import com.bkap.fruitshop.dto.response.RoleResponse;
 import com.bkap.fruitshop.dto.response.UserResponse;
 import com.bkap.fruitshop.entity.Role;
+import com.bkap.fruitshop.entity.User;
 import com.bkap.fruitshop.exception.AppException;
 import com.bkap.fruitshop.exception.ErrorCode;
 import com.bkap.fruitshop.repository.RoleRepository;
@@ -13,6 +14,7 @@ import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Set;
@@ -28,27 +30,16 @@ public class RoleServiceImpl implements RoleService {
     @Override
     @PreAuthorize("hasRole('ADMIN')")
     public List<RoleResponse> getAll() {
-        List<Role> roles = roleRepository.findAll();
-        return roles.stream().map(role -> {
-            RoleResponse roleResponse = modelMapper.map(role, RoleResponse.class);
-
-            // Chuyển đổi danh sách User thành UserResponse và gán roleNames
-            Set<UserResponse> userResponses = role.getUsers().stream().map(user -> {
-                UserResponse userResponse = modelMapper.map(user, UserResponse.class);
-                userResponse.setRoles(user.getRoles().stream()
-                        .map(Role::getName)
-                        .collect(Collectors.toSet())); // Gán danh sách roleNames
-                return userResponse;
-            }).collect(Collectors.toSet());
-
-            roleResponse.setUsers(userResponses); // Gán danh sách UserResponse vào RoleResponse
-            return roleResponse;
-        }).collect(Collectors.toList());
+        return roleRepository.findAllWithUsers()
+                .stream()
+                .map(this::toRoleResponse)
+                .toList();
     }
 
 
     @Override
     @PreAuthorize("hasRole('ADMIN')")
+    @Transactional
     public RoleResponse create(RoleRequest request) {
         if (roleRepository.existsByName(request.getName())) {
             throw new AppException(ErrorCode.ROLE_EXISTED);
@@ -64,9 +55,27 @@ public class RoleServiceImpl implements RoleService {
     public void delete(String roleName) {
         Role existingRole = roleRepository.findByName(roleName)
                 .orElseThrow(() -> new AppException(ErrorCode.ROLE_NOT_FOUND));
+
         if (userRepository.existsByRoles_Id(existingRole.getId())) {
             throw new AppException(ErrorCode.USER_EXIST_IN_ROLE);
         }
+
         roleRepository.delete(existingRole);
+    }
+
+    private RoleResponse toRoleResponse(Role role) {
+        RoleResponse roleResponse = modelMapper.map(role, RoleResponse.class);
+        roleResponse.setUsers(role.getUsers().stream()
+                .map(this::toUserResponse)
+                .collect(Collectors.toSet()));
+        return roleResponse;
+    }
+
+    private UserResponse toUserResponse(User user) {
+        UserResponse userResponse = modelMapper.map(user, UserResponse.class);
+        userResponse.setRoles(user.getRoles().stream()
+                .map(Role::getName)
+                .collect(Collectors.toSet()));
+        return userResponse;
     }
 }
